--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -7,7 +7,7 @@
 
 html {
     overflow: hidden;
-    height: 100;
+    height: 100vw;
 }
 
 
